update post: From "how much" to "whether"

--- a/cmj972m9z000702l7h6bt20x0.md
+++ b/cmj972m9z000702l7h6bt20x0.md
@@ -4,6 +4,7 @@ datePublished: Tue Dec 16 2025 23:09:09 GMT+0000 (Coordinated Universal Time)
 cuid: cmj972m9z000702l7h6bt20x0
 slug: from-how-much-to-whether
 cover: https://raw.githubusercontent.com/ricardotrevisan/ricardotrevisan.github.io/master/images/image_1_20251216.png
+ogImage: https://cdn.hashnode.com/res/hashnode/image/upload/v1765926952769/7c4bbafc-2310-4279-aa26-21b1dc00ee94.png
 tags: hashnode, finance, riskmanagement, aiinfinance, marketstructure, quanttrading, decisiongovernance
 
 ---
